# ruvector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: agentic-synth-ci.yml  build-native.yml  postgres-extension-ci.yml  publish-all.yml  ruvllm-native.yml  validate-lockfile.yml
.ruvector/: intelligence.json
benchmarks/: qdrant_vs_ruvector_benchmark.py
crates/agentic-payments/: Cargo.toml
crates/agentic-payments-wasm/: Cargo.toml
crates/agentic-payments-wasm/src/: lib.rs
crates/agentic-payments/src/: accounts.rs  credits.rs  engine.rs  error.rs  lib.rs  micropayments.rs  subscriptions.rs  transactions.rs  types.rs
crates/ruvector-attention-node/: package.json
crates/ruvector-cli/scripts/: statusline-command.ps1  statusline-command.sh
crates/ruvector-cli/src/cli/: hooks.rs
crates/ruvector-cluster/: Cargo.toml
crates/ruvector-cluster/src/: consensus.rs  discovery.rs  lib.rs  shard.rs
crates/ruvector-collections/: Cargo.toml
crates/ruvector-collections/src/: collection.rs  error.rs  lib.rs  manager.rs
crates/ruvector-core/benches/: hnsw_search.rs
crates/ruvector-core/src/: agenticdb.rs
crates/ruvector-filter/: Cargo.toml
crates/ruvector-filter/src/: error.rs  evaluator.rs  expression.rs  index.rs  lib.rs
crates/ruvector-gnn-node/: package.json
crates/ruvector-gnn-node/npm/linux-arm64-gnu/: package.json
crates/ruvector-gnn-node/npm/linux-x64-gnu/: package.json
crates/ruvector-gnn/src/: lib.rs
crates/ruvector-math-wasm/: README.md
crates/ruvector-metrics/: Cargo.toml
crates/ruvector-metrics/src/: health.rs  lib.rs  recorder.rs
crates/ruvector-mincut/: Cargo.toml  README.md
crates/ruvector-mincut-gated-transformer/docs/: flash_attention_implementation.md
crates/ruvector-mincut-gated-transformer/examples/: flash_attention_demo.rs  mamba_example.rs
crates/ruvector-mincut/examples/: subpoly_bench.rs
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-mincut/src/subpolynomial/: mod.rs
crates/ruvector-node/: Cargo.toml
crates/ruvector-node/src/: lib.rs
crates/ruvector-postgres/: Cargo.toml  README.md
crates/ruvector-postgres/docker/: Dockerfile
crates/ruvector-postgres/sql/: ruvector--0.1.0.sql
crates/ruvector-postgres/src/: operators.rs
crates/ruvector-postgres/src/attention/: operators.rs
crates/ruvector-postgres/src/distance/: mod.rs  simd.rs
crates/ruvector-postgres/src/graph/: mod.rs  (+2 more)
crates/ruvector-raft/: Cargo.toml
crates/ruvector-raft/src/: election.rs  lib.rs  log.rs  node.rs  rpc.rs  state.rs
crates/ruvector-replication/: Cargo.toml
crates/ruvector-replication/src/: conflict.rs  failover.rs  lib.rs  replica.rs  stream.rs  sync.rs
crates/ruvector-server/: Cargo.toml
crates/ruvector-server/src/: error.rs  lib.rs  state.rs
crates/ruvector-server/src/routes/: collections.rs  health.rs  mod.rs  points.rs
crates/ruvector-snapshot/: Cargo.toml
crates/ruvector-snapshot/src/: error.rs  lib.rs  manager.rs  snapshot.rs  storage.rs
crates/ruvector-wasm/: Cargo.toml  INTEGRATION_STATUS.md
crates/ruvector-wasm/src/: lib.rs
crates/sona/: README.md
crates/wasm-app-store/: Cargo.toml
crates/wasm-app-store-wasm/: Cargo.toml
crates/wasm-app-store-wasm/src/: lib.rs
crates/wasm-app-store/src/: apps.rs  category.rs  chip.rs  error.rs  full.rs  lib.rs  registry.rs  store.rs  version.rs
docs/: ALL_PACKAGES_STATUS.md  CONTRIBUTING.md  CURRENT_STATUS.md  LOCKFILE_AUTOMATION.md  MACOS_PACKAGES_SETUP.md  NPM_PUBLISHING.md  NPM_READY_STATUS.md  PUBLISHING_COMPLETE.md  SPECULATIVE_DECODING.md  exotic-neural-trader-code-review.md  neural-trader-performance-analysis.md
docs/research/: exotic-techniques-verified-results.md
docs/research/sparql/: EXAMPLES.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SPARQL_SPECIFICATION.md
examples/apify/neural-trader-system/: README.md
examples/conceptnet-integration/: .gitignore  Cargo.toml
examples/conceptnet-integration/src/: lib.rs
examples/conceptnet-integration/src/api/: mod.rs
examples/conceptnet-integration/src/graph/: hybrid.rs
examples/conceptnet-integration/src/loader/: assertions.rs  mod.rs  numberbatch_loader.rs  optimization.rs  streaming.rs
examples/conceptnet-integration/src/numberbatch/: mod.rs
examples/conceptnet-integration/tests/: integration_tests.rs
examples/edge/: README.md
examples/edge/examples/: local_swarm.rs
examples/edge/pkg/: README.md  package.json
examples/edge/src/: compression.rs  gun.rs  protocol.rs  transport.rs
examples/exo-ai-2025/: Cargo.toml
examples/exo-ai-2025/crates/exo-exotic/: Cargo.toml
examples/exo-ai-2025/crates/exo-exotic/benches/: exotic_benchmarks.rs
examples/exo-ai-2025/crates/exo-exotic/src/: black_holes.rs  collective.rs  dreams.rs  emergence.rs  free_energy.rs  lib.rs  morphogenesis.rs  multiple_selves.rs  strange_loops.rs  temporal_qualia.rs  thermodynamics.rs
examples/exo-ai-2025/report/: EXOTIC_BENCHMARKS.md  EXOTIC_EXPERIMENTS_OVERVIEW.md  EXOTIC_TEST_RESULTS.md  EXOTIC_THEORETICAL_FOUNDATIONS.md
examples/onnx-embeddings/: Cargo.toml
examples/onnx-embeddings-wasm/: Cargo.toml  README.md  loader.js  parallel-worker.mjs  test-parallel.mjs  test.mjs
examples/onnx-embeddings-wasm/src/: embedder.rs  error.rs  model.rs  pooling.rs  tokenizer.rs
examples/onnx-embeddings/src/: model.rs
examples/onnx-embeddings/src/gpu/: backend.rs  mod.rs  operations.rs
examples/ruvLLM/esp32/: Cargo.toml  README.md
examples/wasm/ios/: Cargo.toml  README.md
examples/wasm/ios/scripts/: build.sh
examples/wasm/ios/src/: attention.rs  embeddings.rs  lib.rs  qlearning.rs
examples/wasm/ios/swift/: HybridRecommendationService.swift  Package.swift  WasmRecommendationEngine.swift
examples/wasm/ios/swift/Resources/: recommendation.wasm
examples/wasm/ios/swift/Tests/: RecommendationTests.swift
examples/wasm/ios/tests/: engine_tests.rs
npm/: package-lock.json
npm/core/: package.json  test-package.cjs
scripts/: README.md  ci-sync-lockfile.sh  install-hooks.sh  sync-lockfile.sh  test-wasm.mjs
(+83 files in other folders)
