[package]
name = "agentic-payments-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for agentic-payments - browser and embedded payment processing"
keywords = ["wasm", "payments", "micropayments", "webassembly"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
agentic-payments = { path = "../agentic-payments", features = ["wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
