[package]
name = "ruvector-filter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ruvector-core = { path = "../ruvector-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = "4.5"
