[package]
name = "ruvector-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ruvector-core = { path = "../ruvector-core" }
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
