[package]
name = "wasm-app-store-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for wasm-app-store - browser-based app marketplace"
keywords = ["wasm", "app-store", "marketplace", "webassembly"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-app-store = { path = "../wasm-app-store", features = ["wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console", "Blob", "Url"] }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
