[workspace]

[package]
name = "conceptnet-integration"
version = "0.1.0"
edition = "2021"
description = "ConceptNet Knowledge Graph Integration with RuVector"
authors = ["RuVector Team"]
license = "MIT"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["conceptnet", "knowledge-graph", "vector-database", "gnn", "commonsense"]
categories = ["database", "science", "machine-learning"]

[dependencies]
# RuVector core components
ruvector-core = { path = "../../crates/ruvector-core" }
ruvector-graph = { path = "../../crates/ruvector-graph" }
ruvector-gnn = { path = "../../crates/ruvector-gnn" }
ruvector-attention = { path = "../../crates/ruvector-attention" }
ruvector-sona = { path = "../../crates/sona" }

# Async runtime & HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
ndarray = "0.16"
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"
memmap2 = "0.9"

# Rate limiting
governor = "0.7"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# Async utilities
futures = "0.3"

# Compression for .gz files
flate2 = "1.0"

# CPU detection for parallel loading
num_cpus = "1.16"

# Hashing for deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# CSV parsing for ConceptNet assertions
csv = "1.3"

# Progress bars
indicatif = "0.17"

# SIMD operations (portable across architectures)
wide = "0.7"

# Memory-mapped file reading
bytemuck = { version = "1.21", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.14"
approx = "0.5"

[[bin]]
name = "conceptnet-demo"
path = "src/main.rs"

[[bin]]
name = "load-real-conceptnet"
path = "src/bin/load_real_conceptnet.rs"

[[bin]]
name = "conceptnet-optimized"
path = "src/bin/conceptnet_optimized.rs"

[[bench]]
name = "conceptnet_benchmarks"
harness = false
path = "benches/conceptnet_benchmarks.rs"

[features]
default = ["full"]
full = ["gnn", "attention", "sona", "numberbatch"]
gnn = []
attention = []
sona = []
numberbatch = []
distributed = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
